Carousel glyphicon background is back and now uses fixed position so it covers page as you scroll

--- a/pages/mainTheme.css
+++ b/pages/mainTheme.css
@@ -22,7 +22,7 @@ display: inline-block;
 }
 }
 .carousel-control.left, .carousel-control.right{
-background-image: none;
+position:fixed;
 }
 .carousel-control .glyphicon-chevron-right {
 position:fixed;
